--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <p>______________________________________________________________________</p>
 <h3>随便做的东西，没多大用处，页面的内容可能不定时更新。</h3>
 <h3>如果你看到了，那就说明你看到了，恭喜你被我恭喜到了。</h3>
-<h3>你这儿目的是什么呢。</h3>
+<h3>所以你是怎么发现这儿的呢。</h3>
 <h3></h3>
 <h3>要不一起来组乐队吧！去组一辈子乐队(</h3>
 <h3>（不过应该没人能找到这里吧）</h3>
