--- a/index.html
+++ b/index.html
@@ -6,34 +6,35 @@
        <style type="text/css">
 
         body{
-             background-image: url(./1759642516897.jpeg);
+    
+             background-image: url(./IMG_20251006_111434.jpg);
              text-align:center;
              color: black;
              }
             .box{
-          width:1100px;
+          width:1800px;
           height:100px;
-          background-color: rgba(250,250,210,.95);
+          background-color: rgba(255,192,203,.95);
           margin: 40px auto ;
           border-radius: 30px;
           }
             .box2{
-          width:1100px;
+          width:1800px;
           height:420px;
           background-color: rgba(255,250,250,.65);
           margin: 10px auto ;
           border-radius: 50px;
           }
             .box3{
-          width:1100px;
+          width:1800px;
           height:150px;   
           background-color: rgba(255,250,250,.80);
-          margin: 1180px auto ;  
+          margin: 545px auto ;  
           border-radius: 50px;  
           }
             .box4{
-          width:1100px;
-          height:510px;   
+          width:1800px;
+          height:1500px;   
           background-color: #E1FFFF;
           margin: 60px auto ;  
           border-radius: 0px;  
@@ -48,7 +49,7 @@
 	<meta charset=
   <p></p>	
 	<h1>爱执AIZ</h1>
- <p>Ciallo～(∠・ω< )⌒☆</p>
+ <p>个人页</p>
  <img src=""/>
  
   <div class="box2">
@@ -60,7 +61,7 @@
 <p>______________________________________________________________________</p>
 <h3>随便做的东西，没多大用处，页面的内容可能不定时更新。</h3>
 <h3>如果你看到了，那就说明你看到了，恭喜你被我恭喜到了。</h3>
-<h3>所以你是怎么发现这儿的呢。</h3>
+<h3>你这儿目的是什么呢。</h3>
 <h3></h3>
 <h3>要不一起来组乐队吧！去组一辈子乐队(</h3>
 <h3>（不过应该没人能找到这里吧）</h3>
@@ -77,8 +78,8 @@
   <p></p> 
   <img src="1759626596413.gif"/>
   <img src=""/>
-  <img src=""/>
+  <img src="Screenrecording_20250725_171937_converted.gif"/>
   <img src=""/>
   
   </body>
-</html>
+  </html>
