--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
 
         body{
     
-             background-image: url(./IMG_20251006_111434.jpg);
+             background-image: url(./illust_121147418_20251006_115104.png);
              text-align:center;
              color: black;
              }
             .box{
-          width:1800px;
-          height:100px;
-          background-color: rgba(255,192,203,.95);
+          width:1980px;
+          height:120px;
+          background-color: rgba(255,250,205,.95);
           margin: 40px auto ;
           border-radius: 30px;
           }
             .box2{
-          width:1800px;
-          height:420px;
-          background-color: rgba(255,250,250,.65);
+          width:1980px;
+          height:580px;
+          background-color: rgba(255,250,250,.70);
           margin: 10px auto ;
           border-radius: 50px;
           }
             .box3{
-          width:1800px;
+          width:1980px;
           height:150px;   
           background-color: rgba(255,250,250,.80);
-          margin: 545px auto ;  
+          margin: 1700px auto ;  
           border-radius: 50px;  
           }
             .box4{
-          width:1800px;
-          height:1500px;   
+          width:1980px;
+          height:600px;   
           background-color: #E1FFFF;
-          margin: 60px auto ;  
+          margin: 50px auto ;  
           border-radius: 0px;  
           }
             
@@ -49,7 +49,7 @@
 	<meta charset=
   <p></p>	
 	<h1>爱执AIZ</h1>
- <p>个人页</p>
+ <p>Ciallo～(∠・ω< )⌒☆</p>
  <img src=""/>
  
   <div class="box2">
@@ -78,7 +78,7 @@
   <p></p> 
   <img src="1759626596413.gif"/>
   <img src=""/>
-  <img src="Screenrecording_20250725_171937_converted.gif"/>
+  <img src=""/>
   <img src=""/>
   
   </body>
