--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" 
-	<title></title>
+	<title>爱执AIZ</title>
        <style type="text/css">
 
         body{
