--- a/new1.html
+++ b/new1.html
@@ -40,7 +40,7 @@
         <h3></h3>
         <img src="1759626596413.gif" width="500"><br>
         <br><br><br>
-        <a href="https://aiz1855.github.io">个人页</a>
+        <a href="index.html">个人页</a>
         </div>
         
         <div class="box1">
