--- a/new1.html
+++ b/new1.html
@@ -13,7 +13,7 @@
        .box{
         width: 1000px;
         height: 800px;
-        background-color: rgba(240,250,255,.80);
+        background-color: #00FFFF;
         margin: 100px auto;
         border-radius: 60px;
           }
