--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <p>"大勾一段带一段， 曼波越打越难捋"</p>
     <p>"哈呀酷哦哈基米， 曼波基米带段一"</p>
 <p>____________________________________________________________________________________________________________________________________________</p>
-<h3>随便做的东西，没多大用处，页面的内容可能不定时更新。</h3>
+<h3>随便做的东西，没多大用处，页面的内容可能不定时更新，</h3>
 <h3>如果你看到了，那就说明你看到了，恭喜你被我恭喜到了。</h3>
-<h3>你这儿目的是什么呢。</h3>
-<h3></h3>
-<h3>要不一起来组乐队吧！去组一辈子乐队(</h3>
+<h3>因网络问题有时图像、音频会加载不出来，</h3>
+<h3>可以耐心等待刷新或使用代理。</h3>
+<h3>不想登校，去组一辈子乐队吧。(</h3>
 <h3>（不过应该没人能找到这里吧）</h3>
 
   <div class="box3">
