--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h3>如果你看到了，那就说明你看到了，恭喜你被我恭喜到了。</h3>
 <h3>因网络问题有时图像、音频会加载不出来，</h3>
 <h3>可以耐心等待刷新或使用代理。</h3>
-<h3>不想登校，去组一辈子乐队吧。(</h3>
+<h3>不想登校，去组一辈子乐队吧(</h3>
 <h3>（不过应该没人能找到这里吧）</h3>
 
   <div class="box3">
@@ -71,7 +71,8 @@
 <br>
 <a href="https://x.com/ai_zhi65187">X</a>
 <br><br>
-<a href="new1.html">另一页</a>
+<a href="https://aiz55555.github.io">丨动人之音丨</a>
+<a href="new1.html">丨另一页面丨</a>
 
   <div class="box4">
   <p></p>
