--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>"大勾一段带一段， 曼波越打越难捋"</p>
     <p>"哈呀酷哦哈基米， 曼波基米带段一"</p>
 <p>____________________________________________________________________________________________________________________________________________</p>
-<h3>随便做的东西，没多大用处，页面的内容可能不定时更新，</h3>
+<h3>随便做的东西，没多大用处，以后也许会添加更多页面。</h3>
 <h3>如果你看到了，那就说明你看到了，恭喜你被我恭喜到了。</h3>
 <h3>因网络问题有时图像、音频会加载不出来，</h3>
 <h3>可以耐心等待刷新或使用代理。</h3>
@@ -72,7 +72,7 @@
 <a href="https://x.com/ai_zhi65187">X</a>
 <br><br>
 <a href="https://aiz55555.github.io">丨动人之音丨</a>
-<a href="new1.html">丨另一页面丨</a>
+<a href="new1.html">丨第二页面丨</a>
 
   <div class="box4">
   <p></p>
